--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/http-client": "6.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.1.*",
+        "symfony/translation": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/ux-turbo": "^2.0",
         "symfony/webpack-encore-bundle": "^1.13",
