--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,6 +3,10 @@ framework:
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
+    http_client:
+        scoped_clients:
+            githubContentClient:
+                base_uri: https://gist.githubusercontent.com
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
