--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,9 +11,9 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        bind:
-            '$isDebug': '%kernel.debug%'
-            '$defauld_langue': '%kernel.default_locale%'
+        # bind:
+        #     '$isDebug': '%kernel.debug%'
+        #     '$defauld_langue': '%kernel.default_locale%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
