--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,8 +6,9 @@ framework:
     http_client:
         scoped_clients:
             githubContentClient:
-                base_uri: https://gist.githubusercontent.com
-
+                base_uri: https://raw.githubusercontent.com/
+                headers: 
+                       Authorization: 'Token %env(GITHUB_TOKEN)%'
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
