--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "6.1.*",
+        "symfony/maker-bundle": "^1.48",
         "symfony/stopwatch": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     }
